# JNDSLAM

./: CHANGELOG  LICENSE  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  configure  configure.ac
data/hts_lab/: arctic_a0001_1.lab  arctic_a0003_1.lab
data/lab/: arctic_a0002_1.lab
data/pitch/: arctic_a0001_1.f0  arctic_a0002_1.f0  arctic_a0003_1.f0
data/simple_lab/: arctic_a0001_1.lab  arctic_a0002_1.lab  arctic_a0003_1.lab
m4/: ax_cxx_compile_stdcxx_0x.m4
src/: jndslam_io.cpp  jndslam_io.h  jndslam_main.cpp  jndslam_main.h  jndslam_smooth.cpp  jndslam_smooth.h  jndslam_std.cpp  jndslam_std.h  jndslam_style.cpp  jndslam_style.h  syllable.cpp  syllable.h  utterance.cpp  utterance.h
